refactor(core): 移除 Lombok 依赖
- 移除了对 Lombok @Getter、@Setter、@RequiredArgsConstructor、 @Slf4j、@UtilityClass、@SneakyThrows 等注解的依赖